# This file is part of https://github.com/KurtBoehm/tlaxcaltin.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

option('tests', type: 'boolean', value: false)
option('examples', type: 'boolean', value: false)

option(
  'mpi_implementation',
  type: 'combo',
  choices: ['openmpi', 'mpich', 'auto', 'none'],
  value: 'auto',
  yield: true,
)
